Fixed some bugs, Add some features
FIX: Fails database copy.
FIX: Some database searches are not working properly.
FIX: Cannot download the CSV file of search results.
FIX: Customize HTML preview area doesn't redraw when update button is clicked.
FIX: Column value is not displayed on the entry page if the column name is changed during database creation.
FIX: Cannot download the release files when 'Download file name' is different from 'Database name' and 'Alias name'.
FIX: Cannot download the JavaScript files uploaded by 'Upload files'.
FIX: Typo DATABASE_NAME_DEVEROPMENT -> DATABASE_NAME_DEVELOPMENT
ADD: In the database list, show databases that do not have Config permission but have Read permission.
ADD: Apply the same A tag CSS as the table page to the entry page.
ADD: GraphDB can be used as RDF store.
ADD: Show public databases on the top page.
ADD: Download ontology by http://<server_name>/ontology/<database_name>
ADD: Columns link settings (ID separator and HTML link) are applied to Entry page.
ADD: Regular expression can be used for ID separator, Improve ID separator form UI.
ADD: Apply ID separator settings when generating RDF data.
ADD: Show N/A icon if release file does not exist.

--- a/app/assets/stylesheets/entries.scss
+++ b/app/assets/stylesheets/entries.scss
@@ -1,7 +1,24 @@
 // Place all the styles related to the entries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+a {
+  text-decoration: none;
+  color: #FF478A;
+  transition: color 0.3s;
+  &:before {
+    font-family: "FontAwesome";
+    content: "\f0c5";
+    padding-right: 3px;
+    display: inline-block;
+    font-style: normal;
+    font-variant: normal;
+    text-rendering: auto;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+  }
+}
 
+/*
 table#togodb_show_table {
     border-collapse: collapse;
 }
@@ -26,3 +43,4 @@ table#togodb_show_table .column_value {
     border-width: 0px 0px 1px 0px;
     padding: 5px;
 }
+*/
