--- a/app/views/pages/columns_link.js.erb
+++ b/app/views/pages/columns_link.js.erb
@@ -1,4 +1,4 @@
-$("#preview-btn").click();
+reload_all_previews();
 $("#columns_settings_contents").html(
     "<%= j(render partial: 'columns_settings_contents') %>"
 );
