--- a/app/views/releases/_contents.html.slim
+++ b/app/views/releases/_contents.html.slim
@@ -19,7 +19,7 @@
 section.togodb_create_db_sectionbox
   #contents_editheader.togodb_create_db_sectionbox_content
     #togodb_create_headerline
-      .togodb_import_track_contents
+      #togodb-table-view.togodb_import_track_contents
         table.togodb_table_release
           tbody
             tr
