--- a/app/views/releases/_release_file_td.html.slim
+++ b/app/views/releases/_release_file_td.html.slim
@@ -7,3 +7,7 @@
 
     .togodb_export_size
       = file_size(table.name, dataset_name, format)
+
+- else
+  .togodb_export_icon_box
+    div.togodb_export_icon_circle.na
