--- a/app/views/tables/_quickbrowse.js.erb
+++ b/app/views/tables/_quickbrowse.js.erb
@@ -1,7 +1,7 @@
 <%# The JavaScript code blow is part of "flexigrid.js" %>
 <%# The code is rendered at "flexigrid.js" %>
 
-let Togodb = {};
+var Togodb = {};
 
 Togodb.ListViewer = function (options) {
     options = options || {};
