--- a/app/views/tables/update.js.erb
+++ b/app/views/tables/update.js.erb
@@ -1,1 +1,5 @@
+<% if @error_msg %>
+$("#db-operation-update-msg").html("<%= j(render partial: 'application/alert_message', locals: { message: @error_msg }) %>");
+<% else %>
 $("#db-operation-update-msg").html("<%= j(render partial: 'application/success_message', locals: { message: 'The database configration has been updated successfully.' }) %>");
+<% end %>
