--- a/app/views/lists/_table_row.html.slim
+++ b/app/views/lists/_table_row.html.slim
@@ -1,7 +1,8 @@
 tr.odd
   td.left.sorting_1.style.style_fontsize_14
     = link_to table.name, data_list_path(table.name), target: '_blank'
-    = link_to content_tag(:span, 'Config', class: 'table_arrow'), config_path(table.name)
+    - if @user.execute_table?(table)
+      = link_to content_tag(:span, 'Config', class: 'table_arrow'), config_path(table.name)
   td
     = database_access_text(table)
   td.right
@@ -13,6 +14,7 @@ tr.odd
   td.release_info_data_table
     .tabble_menu_row_other
       .table_menu_actions_other
-        = link_to content_tag(:div, 'Copy', class: 'copy'), copy_table_path(table)
-        = link_to content_tag(:div, 'Append', class: 'add'), append_table_path(table)
-        = link_to content_tag(:div, 'Delete', class: 'delete'), table_path(table), method: :delete, data: { confirm: "Are you sure you want to delete the database '#{table.name}' ?" }
+        - if @user.execute_table?(table)
+          = link_to content_tag(:div, 'Copy', class: 'copy'), copy_table_path(table)
+          = link_to content_tag(:div, 'Append', class: 'add'), append_table_path(table)
+          = link_to content_tag(:div, 'Delete', class: 'delete'), table_path(table), method: :delete, data: { confirm: "Are you sure you want to delete the database '#{table.name}' ?" }
