--- a/app/views/pages/_link_setting_table.html.slim
+++ b/app/views/pages/_link_setting_table.html.slim
@@ -13,8 +13,9 @@ table.togodb_table_inform.margin_top_28 cellpadding="5" cellspacing="0"
       td
         = column.label
       td
-        = text_field_tag "#{param}[id_separator]", column.id_separator, size: 10
+        = select_tag "#{param}[id_separator_pdl]", options_for_select([['comma', '/,/'], ['semicolon', '/;/'], ['space', '/ /'], ['linefeed', '/\n/']], column.id_separator), include_blank: true, class: 'id-separator-selector', data: { colid: column.id }
+        = text_field_tag "#{param}[id_separator]", column.id_separator, size: 5, class: 'id-separator-text', data: { colid: column.id }
       td
         = select_tag("#{param}[other_type]", "<option value=\"\"></option>".html_safe + options_from_collection_for_select(Togodb::ColumnTypes.supported_types.map { |h| [h[:label], h[:name]] }, :last, :first, column.other_type).html_safe, class: "link-other-type-selector", data: { colid: column.id, colname: column.name })
       td align="left"
-        = text_field_tag "#{param}[html_link_prefix]", column.html_link_prefix, size: 60
+        = text_field_tag "#{param}[html_link_prefix]", column.html_link_prefix, class: 'html-link-text', size: 60, data: { colid: column.id, colname: column.name }
