--- a/app/views/pages/columns_settings.js.erb
+++ b/app/views/pages/columns_settings.js.erb
@@ -1,4 +1,4 @@
-$("#preview-btn").click();
+reload_all_previews();
 $("#config-html-setting-message").html(
   "<%= j(render partial: 'application/success_message', locals: { message: 'Column setting has been updated successfully.' }) %>"
 );
