--- a/app/views/releases/show.html.slim
+++ b/app/views/releases/show.html.slim
@@ -3,6 +3,7 @@
   = stylesheet_link_tag "style"
   = stylesheet_link_tag "font-awesome"
   = stylesheet_link_tag "bootstrap"
+  = stylesheet_link_tag "info"
   = javascript_include_tag "bootstrap"
   = javascript_include_tag "releases"
 
