--- a/app/views/sparql/search.js.erb
+++ b/app/views/sparql/search.js.erb
@@ -1,6 +1,7 @@
 $("#sparql-running-icon").hide();
 $("#sparql-result").show();
-<% if @status.success? %>
+<%# if @status.success? %>
+<% if true %>
 $("#sparql-result").html("<pre><code><%= j(@result) %></code></pre>");
 <% else %>
 $("#sparql-result").html("<pre><code>ERROR:<br /><%= j(@stderr) %></code></pre>");
